# bore

./: .cargo-audit.toml  .clippy.toml  .gitignore  BACKEND_API_SPEC.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  COMMIT_MESSAGE.txt  Cargo.toml  Cargo.toml.backup  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_GUIDE.md  Dockerfile  EXEMPLARY_CODE_PATTERNS.md  FIXCRITICS.md  FIXES_IMPLEMENTED.md  FIX_PUBLIC_DIRECTORY.md  HEARTBEAT_IMPLEMENTATION.md  HIGH_SCALE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  INSTALLATION.md  INTEGRATION_TESTS_FIXED.md  INTEGRATION_TEST_STRATEGY.md  MIGRATION.md  MONITORING.md  Makefile  NEW_ARCHITECTURE.md  NEXT_STEPS.md  QUALITY_SUMMARY.txt  QUICK_FIXES_SUMMARY.md  QUICK_START.md  README.md  SIMPLE_SCALING.md  TESTING_GUIDE.md  TIMEOUT_FIX_SUMMARY.md  TOOLING_SETUP.md  USER_GUIDE_MANAGED.md  VIEWER_UPDATE.md  (+8 more)
.github/: WORKFLOW_CONSOLIDATION.md
.github/workflows/: backend-ci.yml  ci.yml  code-quality.yml  docker-publish.yml  docker.yml  gui-tests.yml  integration-tests.yml  integration.yml  mean_bean_ci.yml  mean_bean_deploy.yml  security-audit.yml
assessment_archive/: ASSESSMENT_COMPLETE.md  CONCERNS_ADDRESSED.md  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  KUBERNETES.md  QUICK_REFERENCE.md  SECURITY.md  TROUBLESHOOTING.md  workflow_restart_test.md
backend/: .env  .env.example  .eslintrc.json  .gitignore  .migrationrc.json  .npmrc  10_OUT_OF_10_IMPROVEMENTS.md  ACHIEVEMENT_UNLOCKED.md  CHANGES.md  CRITICAL_FIXES.md  CRITICAL_IMPROVEMENTS.md  Dockerfile  FEATURE_STATUS.md  FIXES_APPLIED.md  HIGH_SCALE_IMPROVEMENTS.md  HOW_TO_CONNECT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_APPLIED.md  MASTER_TUNNEL_TOGGLE.md  NAMING_CONVENTIONS.md  NAMING_CONVENTION_CHANGES.md  PRODUCTION_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_HIGH_SCALE.md  README.md  README_UPDATES.md  TYPESCRIPT_MIGRATION.md  TYPESCRIPT_MIGRATION_COMPLETED.md  TYPESCRIPT_MIGRATION_STATUS.md  TYPESCRIPT_QUICKSTART.md  alerting.js  alerting.ts  auth-middleware.js  auth-middleware.ts  build-frontend.ts  capacity-limiter.js  capacity-limiter.ts  config.js  (+28 more)
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/docs/: ADMIN_SETUP.md  openapi.yaml
backend/frontend-src/: claim-trial.ts  dashboard.ts  login.ts  signup.ts  viewer.ts
backend/middleware/: capacity-check.js  capacity-check.ts  http-logger.js  http-logger.ts  rate-limiter.js  rate-limiter.ts  refresh-token.js  refresh-token.ts  request-id.js  request-id.ts  validation.js  validation.ts
backend/migrations/: .gitkeep  1729080000000_initial-schema.js  1729080000000_initial-schema.ts  README.md  README_USAGE.md  example-typescript.ts
backend/public/: claim-trial.html  dashboard.html  login.html  signup.html  viewer.html
backend/routes/: admin-routes.js  auth-routes.js  auth-routes.ts  instance-routes.js  instance-routes.ts  internal-routes.js  internal-routes.ts
backend/scripts/: benchmark-migrations.js  benchmark-migrations.ts  create-admin.ts  run-migrations.sh  setup-everything.sh  setup-monitoring.sh  setup-test-db.sh  teardown-test-db.sh  verify-setup.sh
backend/services/: redis-service.js  redis-service.ts
backend/src/: index.ts
backend/tests/: README.md  auth.test.js  auth.test.ts  capacity-limiter.test.js  capacity-limiter.test.ts  circuit-breaker.test.js  circuit-breaker.test.ts  error-handler.test.js  error-handler.test.ts  instance-lifecycle.test.js  jest.setup.ts  load-test.js  load-test.ts  naming-convention.test.js  naming-convention.test.ts  server-registry.test.js  server-registry.test.ts  validation.test.js  validation.test.ts  websocket.test.ts
backend/types/: express.d.ts  index.d.ts
backend/utils/: circuit-breaker.js  circuit-breaker.ts  error-handler.js  error-handler.ts  logger.js  logger.ts  naming-convention.js  naming-convention.ts
bore-client/: Cargo.toml  Dockerfile  README.md
bore-client/src/: api_client.rs  auth.rs  client.rs  lib.rs  main.rs
bore-gui/: .gitignore  BUILDING_FOR_USERS.md  BUILD_INSTALLERS.md  BUTTON_BEHAVIOR.md  CHANGES_SUMMARY.md  DELETE_FUNCTIONALITY.md  DEPENDENCY_SETUP.md  DYNAMIC_STATUS_UPDATE.md  INSTALLATION_FEATURES.md  INSTALLER_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SIMPLE_INSTRUCTIONS.txt  START_HERE.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  TEST_QUICK_START.md  USER_INSTALLATION_GUIDE.md  build-installers.bat  build-installers.sh  index.html  package-lock.json  package.json  playwright.config.ts  prepare-build.sh  prepare-resources.sh  test-deps.md  vitest.config.ts
bore-gui/e2e/: create-instance.spec.ts  dashboard.spec.ts  dependency-check.spec.ts  helpers.ts  login.spec.ts
bore-gui/src/: App.test.tsx  App.tsx  styles.css
bore-gui/src-tauri/: Cargo.toml  build.rs  create_icons.py  tauri.conf.json
bore-gui/src-tauri/icons/: icon.icns
bore-gui/src-tauri/src/: commands.rs  main.rs  state.rs  tunnel_manager.rs
bore-gui/src-tauri/src/commands/: auth.rs  code_server.rs  dependencies.rs  events.rs  instances.rs  mod.rs  tunnels.rs  utils.rs
bore-server/: .env  Cargo.toml  Dockerfile  README.md
bore-server/src/: backend.rs  lib.rs  main.rs  server.rs
bore-shared/: Cargo.toml
bore-shared/src/: auth.rs  lib.rs  protocol.rs  timeouts.rs
bore-shared/tests/: auth_bypass_test.rs  auth_flows_test.rs  auth_test.rs  e2e_test.rs  full_flow_test.rs  tunnel_limit_test.rs
bore-shared/tests/integration/: README.md
bore-shared/tests/integration/fixtures/: mock_backend.rs  mod.rs  test_helpers.rs
docs/: AUTH_TIMEOUT_FIX.md  DEVELOPMENT_GUIDE.md  PROJECT_ASSESSMENT.md  PROJECT_SUMMARY.md
docs/api/: README.md  openapi.yaml  postman_collection.json
k8s/: deploy.sh
k8s/base/: backend.yaml  bore-server.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  (+4 more)
src/: auth.rs  backend.rs  client.rs  lib.rs  main.rs  server.rs
tests/: auth_timeout_test.rs  e2e_test.rs  full_tunnel_integration_test.rs  integration_test.rs  performance_benchmarks.rs  run_integration_tests.sh  run_performance_tests.sh
(+115 files in other folders)
