[workspace]
resolver = "2"
members = [
    "bore-shared",
    "bore-server",
    "bore-client"
]

[workspace.package]
version = "0.6.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
repository = "https://github.com/ekzhang/bore"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.0"
fastrand = "2.1"
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "io-util", "macros", "net", "time", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["serde", "v4"] }
