[package]
name = "bore-client"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Client component for bore - local proxy that forwards ports through a tunnel"
documentation = "https://docs.rs/bore-client"
keywords = ["network", "client", "tunnel", "tcp", "cli"]
categories = ["network-programming", "web-programming", "command-line-utilities"]

[lib]
name = "bore_client"
path = "src/lib.rs"

[[bin]]
name = "bore"
path = "src/main.rs"

[dependencies]
bore-shared = { path = "../bore-shared" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
dirs = "5.0"
